# free-cad-hulls

./: CMakeLists.txt  Hulls.dox  HullsGui.py  Init.py  InitGui.py  ParametricHull.py  TableHull.py  hulls.ui  parametric-hulls.ui
Resources/: Hulls.qrc
